<resources>
    <string name="app_name">Predict</string>

    <string name="title">Judul</string>
    <string name="nama">Nama</string>


    <string name="email"> Email </string>
    <string name="password"> Password </string>
    <string name="Lokasi"> Lokasi </string>
    <string name="submit">Submit</string>
    <string name="loginadmin">Login Admin</string>
    <string name="loginuser">Login User</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="bencana">Banjir</string>
    <string name="wilayah">Wilayah</string>
    <string name="LongLat">Long,Lat</string>
    <string name="confident">Hujan</string>
    <string name="jam">Waktu</string>
    <string name="register">Create Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Berita</string>
    <string name="dates">//-//-//</string>


    <string name="tvshow">prediksi</string>
    <string name="reqtoken">700362298333-eaf0u4j1np3a6cvanphgf9jhsstrorbc.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="location_name">Nama Lokasi</string>

    <string name="hari">Jumlah Hari</string>
    <string name="tanggal">Setelah Tanggal</string>
    <string-array name="location">
        <item>Bendungan Gintung</item>
        <item>Bojong Murni</item>
        <item> Cawang</item>
        <item>Cengkareng Drain</item>
        <item>Cibinong</item>
        <item>Cimanggu</item>
        <item>Gadog</item>
        <item>Gunung Mas</item>
        <item>Jatijajar</item>
        <item>Jeruk Purut</item>
        <item>Kampung Kelapa</item>
        <item>Kampus UI</item>
        <item>Kemensos</item>
        <item>Lengkong Barang</item>
        <item>Manggarai</item>
        <item>Pasir Jaya</item>
        <item>Situ Parigi</item>
        <item>Sumur Batu</item>
        <item>Villa Pamulang</item>

    </string-array>
</resources>