<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="240dp"
        app:cardElevation="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageItem"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:scaleType="centerCrop"
                android:src="@drawable/samplepict"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cvBencana"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageItem"
                android:text="@string/bencana"/>
            <TextView
                android:id="@+id/dtIBencana"
                android:layout_width="0dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toEndOf="@+id/cvBencana"
                app:layout_constraintTop_toBottomOf="@+id/imageItem" />
            <TextView
                android:id="@+id/cvWilayah"
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvBencana"
                android:layout_marginStart="4dp"
                android:text="@string/wilayah"/>
            <TextView
                android:id="@+id/dtIWilayah"
                android:layout_width="0dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toEndOf="@+id/cvWilayah"
                app:layout_constraintTop_toBottomOf="@+id/dtIBencana" />
            <TextView
                android:id="@+id/cvLonglat"
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvConfident"
                android:text="@string/LongLat"/>
            <TextView
                android:id="@+id/dtILongLat"
                android:layout_width="0dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toEndOf="@+id/cvLonglat"
                app:layout_constraintTop_toBottomOf="@+id/dtIConfident" />

            <TextView
                android:id="@+id/cvConfident"
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvWaktu"
                android:text="@string/confident"/>
            <TextView
                android:id="@+id/dtIConfident"
                android:layout_width="0dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toEndOf="@+id/cvConfident"
                app:layout_constraintTop_toBottomOf="@+id/dtIWaktu" />
            <TextView
                android:id="@+id/cvWaktu"
                android:layout_marginTop="5dp"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvWilayah"
                android:text="@string/jam"/>
            <TextView
                android:id="@+id/dtIWaktu"
                android:layout_width="0dp"
                android:layout_height="13dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toEndOf="@+id/cvWaktu"
                app:layout_constraintTop_toBottomOf="@+id/dtIWilayah" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>