<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blue1"
    android:id="@+id/LO1"
    tools:context=".search">

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:maxLines="1" >-->
<!--        <EditText-->
<!--            android:id="@+id/edt_nama"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/location_name"-->
<!--            android:maxLines="1" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/edt_nama"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/Lokasi"
      />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="1" >
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hari"
            android:maxLines="1"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/dates"/>

        <Button
            android:id="@+id/button_date_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Date" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:visibility="gone"
        >
        <Spinner
            android:id="@+id/edt_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Lokasi"
            android:maxLines="1"
            android:visibility="gone"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluebutton"
        android:text="periksa"/>

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_marginTop="350dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/logo"/>



</LinearLayout>